Start of Final Project

--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -3,6 +3,7 @@
 	<head>
 	</head>
 	<body>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 		<h1>Primary Heading</h1>
 		<h2>Secondary Heading</h2>
 		<p>first paragraph</p>
