--- a/class01/hw/GA Press Release/indexfinal.html
+++ b/class01/hw/GA Press Release/indexfinal.html
@@ -5,11 +5,15 @@
 		</head>
 		<body>
 
-			<p> General Assembly offers Classes and Workshops Worldwide </p>
+			
 
-<p> For Immediate Release <p>
+<h1> General Assembly offers Classes and Workshops Worldwide </h1>
+
+<h2> For Immediate Release </h2>
 
 General Assembly, which started in New York as a startup incubator, now offers classes and workshops in technology, design, and entrepreneurship, with campuses around the world in:
+
+<ul>
 
   <li> Atlanta </li>
   <li> Austin </li>
@@ -26,8 +30,8 @@ General Assembly, which started in New York as a startup incubator, now offers c
   <li> Sydney </li>
   <li> Washington D.C </li>
 
+</ul>
+
 <p> For more information, visit <a href="http://generalassemb.ly">General Assembly's website. </a> </p>
 
-
-		<body>
 	<html>
