--- a/class01/hw/GA Press Release/indexfinal.html
+++ b/class01/hw/GA Press Release/indexfinal.html
@@ -32,6 +32,8 @@ General Assembly, which started in New York as a startup incubator, now offers c
 
 </ul>
 
-<p> For more information, visit <a href="http://generalassemb.ly">General Assembly's website. </a> </p>
+<p> For more information, visit <a href="http://generalassemb.ly">General Assembly's website </a> or <a href="about.html">this dead end page with a stupid meme on it. </a> </p>
+
+
 
 	<html>
