more commitment issues

--- a/class01/hw/GA Press Release/about.html
+++ b/class01/hw/GA Press Release/about.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1><a href="indexfinal.html">Go back to the press release </a> </h1>
+<h1><a href="press_release.html">Go back to the press release </a> </h1>
 
 <img src="site image 2.jpg">
 
