--- a/class03/homework/indexHW2.html
+++ b/class03/homework/indexHW2.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 
+<link rel="stylesheet" type="text/css" href="style.css">
+
 <p id="title">Home About Blog Store</p>
 
 <p id="p1"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt aut hic dolor in quos voluptatum laborum numquam labore tempore, quibusdam deleniti explicabo aperiam perspiciatis molestias iure pariatur eveniet facere architecto. </p>
