--- a/class04/art-is-hard/index.html
+++ b/class04/art-is-hard/index.html
@@ -4,7 +4,7 @@
 		<title>My Portfolio</title>
 
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
-		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 
 	<body>
