--- a/class06/homework/startup-matchmaker/index.html
+++ b/class06/homework/startup-matchmaker/index.html
@@ -4,8 +4,59 @@
 
 	<link href='https://fonts.googleapis.com/css?family=Oswald:700,400|Merriweather:700,700italic|Source+Sans+Pro' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/styles.css">
+
 </head>
+
+	<div class="container"></div>
+
+		<h1>Startup Matchmaker</h1>
+
+		<div class="Developer Button"></div>
+			<button>Developers</button>
+		<div class="Designers Button"></div>
+			<button>Designers</button>
+		<div class="How it Works Button"></div>
+			<button>How it Works</button>
+		<div class="Our Team Button"></div>
+			<button>Our Team</button>
+		<div class="Blog Button"></div>
+			<button>Blog</button>
+
+		<div class="Mantra"></div>
+			<p>Because two brains taste are better than one</p>
+
 <body>
 
+	<img src="coworking.jpg">
+
+	<div class=rightbox></div>
+
+		<h1>Meet your Match!</h1>
+
+		<p>Have a great idea for a product, but needhelp making it a reality? We're here to help. Startup Matchmaker is the best place for designers and developers to find each other.</p>
+
+		<button>CREATE A PROFILE</button>
+
+	<div class="Block Container"></div>
+		<div class="Create a Profile"></div>
+			<h1>Create a Profile</h1>
+			<p>Are you a Designer? Developer? Put yourself out there so that others can find you!</p>
+				<button>SIGN UP NOW</button>
+		<div class="Find a Developer"></div>
+			<h1>Find a Developer</h1>
+			<p>Looking for a fantastic developer to work with on the next big thing? Look no further.</p>
+			<div class="button 2"></div>
+				<button>START YOUR SEARCH</button>
+		<div class="Find a Designer"></div>
+			<h1>Find a Designer</h1>
+			<p>Need someone who can make a product intuitive and appealing? Get ready.</p>
+			<div class=button 3></div>
+				<button>START YOUR SEARCH</button>
 </body>
+<footer>
+
+<div class=Shoe></div>
+
+
+</footer>
 </html>
