--- a/class06/homework/startup-matchmaker/index.html
+++ b/class06/homework/startup-matchmaker/index.html
@@ -41,6 +41,7 @@
 		<div class="Create a Profile"></div>
 			<h1>Create a Profile</h1>
 			<p>Are you a Designer? Developer? Put yourself out there so that others can find you!</p>
+			<div class="button 1"></div>
 				<button>SIGN UP NOW</button>
 		<div class="Find a Developer"></div>
 			<h1>Find a Developer</h1>
@@ -56,7 +57,7 @@
 <footer>
 
 <div class=Shoe></div>
-
+<p>(C) 2013 Startup Matchmaker. Made in NY.</p>
 
 </footer>
 </html>
