--- a/class06/homework/startup-matchmaker/index.html
+++ b/class06/homework/startup-matchmaker/index.html
@@ -11,16 +11,12 @@
 
 		<h1>Startup Matchmaker</h1>
 
-		<div class="Developer Button"></div>
-			<button>Developers</button>
-		<div class="Designers Button"></div>
-			<button>Designers</button>
-		<div class="How it Works Button"></div>
-			<button>How it Works</button>
-		<div class="Our Team Button"></div>
-			<button>Our Team</button>
-		<div class="Blog Button"></div>
-			<button>Blog</button>
+		<nav>
+			<a href="#">Developers</a>
+			<a href="#">Designers</a>
+			<a href="#">How it Works</a>
+			<a href="#">Our Team</a>
+			<a href="#">Blog</a>
 
 		<div class="Mantra"></div>
 			<p>Because two brains taste are better than one</p>
