--- a/class06/homework/startup-matchmaker/index.html
+++ b/class06/homework/startup-matchmaker/index.html
@@ -18,6 +18,12 @@
 			<a href="#">Our Team</a>
 			<a href="#">Blog</a>
 
+			**align right
+
+			**inline-block
+
+			**bottom-border
+
 		<div class="Mantra"></div>
 			<p>Because two brains taste are better than one</p>
 
