--- a/class10/jquery-review/index.html
+++ b/class10/jquery-review/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+<div id="box1"> </div>
+
+<div id="box2"> </div>
+
+<script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
+
 </body>
 </html>
 
