--- a/class06/homework/startup-matchmaker/index.html
+++ b/class06/homework/startup-matchmaker/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Startup Matchmaker</title>
+	<title></title>
 
 	<link href='https://fonts.googleapis.com/css?family=Oswald:700,400|Merriweather:700,700italic|Source+Sans+Pro' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/styles.css">
@@ -24,12 +24,12 @@
 
 			**bottom-border
 
-		<div class="Mantra"></div>
+		<div class="mantra"></div>
 			<p>Because two brains taste are better than one</p>
 
 <body>
 
-	<img src="coworking.jpg">
+	<img src="img/coworking.jpg">
 
 	<div class=rightbox></div>
 
@@ -40,17 +40,17 @@
 		<button>CREATE A PROFILE</button>
 
 	<div class="Block Container"></div>
-		<div class="Create a Profile"></div>
+		<div class="createprofile"></div>
 			<h1>Create a Profile</h1>
 			<p>Are you a Designer? Developer? Put yourself out there so that others can find you!</p>
 			<div class="button 1"></div>
 				<button>SIGN UP NOW</button>
-		<div class="Find a Developer"></div>
+		<div class="finddeveloper"></div>
 			<h1>Find a Developer</h1>
 			<p>Looking for a fantastic developer to work with on the next big thing? Look no further.</p>
 			<div class="button 2"></div>
 				<button>START YOUR SEARCH</button>
-		<div class="Find a Designer"></div>
+		<div class="finddesigner"></div>
 			<h1>Find a Designer</h1>
 			<p>Need someone who can make a product intuitive and appealing? Get ready.</p>
 			<div class=button 3></div>
