--- a/class06/homework/startup-matchmaker/index.html
+++ b/class06/homework/startup-matchmaker/index.html
@@ -18,14 +18,15 @@
 			<a href="#">Our Team</a>
 			<a href="#">Blog</a>
 
-			**align right
+		</nav>>
 
-			**inline-block
+		<div class='brains'>
 
-			**bottom-border
+			<p id='brains'>Because two brains <span id='taste'> taste </span> <span id='are'> are </span> better than one.</p>
 
-		<div class="mantra"></div>
-			<p>Because two brains taste are better than one</p>
+		</div>
+			
+	</div>
 
 <body>
 
@@ -33,7 +34,7 @@
 
 	<div class=rightbox></div>
 
-		<h1>Meet your Match!</h1>
+		<h2>Meet your Match!</h1>
 
 		<p>Have a great idea for a product, but needhelp making it a reality? We're here to help. Startup Matchmaker is the best place for designers and developers to find each other.</p>
 
@@ -41,17 +42,17 @@
 
 	<div class="Block Container"></div>
 		<div class="createprofile"></div>
-			<h1>Create a Profile</h1>
+			<h2>Create a Profile</h1>
 			<p>Are you a Designer? Developer? Put yourself out there so that others can find you!</p>
 			<div class="button 1"></div>
 				<button>SIGN UP NOW</button>
 		<div class="finddeveloper"></div>
-			<h1>Find a Developer</h1>
+			<h2>Find a Developer</h1>
 			<p>Looking for a fantastic developer to work with on the next big thing? Look no further.</p>
 			<div class="button 2"></div>
 				<button>START YOUR SEARCH</button>
 		<div class="finddesigner"></div>
-			<h1>Find a Designer</h1>
+			<h2>Find a Designer</h1>
 			<p>Need someone who can make a product intuitive and appealing? Get ready.</p>
 			<div class=button 3></div>
 				<button>START YOUR SEARCH</button>
