--- a/class06/homework/startup-matchmaker/index.html
+++ b/class06/homework/startup-matchmaker/index.html
@@ -4,53 +4,52 @@
 
 	<link href='https://fonts.googleapis.com/css?family=Oswald:700,400|Merriweather:700,700italic|Source+Sans+Pro' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/styles.css">
+	<link href="css/reset.css">
 
-</head>
-
-	<div class="container"></div>
-
-		<h1>Startup Matchmaker</h1>
-
+	<div class="container">
 		<nav>
 			<a href="#">Developers</a>
 			<a href="#">Designers</a>
 			<a href="#">How it Works</a>
 			<a href="#">Our Team</a>
 			<a href="#">Blog</a>
-
 		</nav>>
-
-		<div class='brains'>
-
-			<p id='brains'>Because two brains <span id='taste'> taste </span> <span id='are'> are </span> better than one.</p>
-
-		</div>
-			
+		<h1>Startup Matchmaker</h1>
 	</div>
+</head>
 
 <body>
+	<div class="brainsbox">
+		<p id="brains">Because two brains <span id='taste'> taste </span> <span id=' are '> are</span> better than one.</p>
+	</div>
 
-	<img src="img/coworking.jpg">
+	<div class="wrapper">
 
-	<div class=rightbox></div>
+		<img src="img/coworking.jpg">
 
-		<h2>Meet your Match!</h1>
+		<div class="rightbox"></div>
+
+		<h2>Meet your Match!</h2>
 
 		<p>Have a great idea for a product, but needhelp making it a reality? We're here to help. Startup Matchmaker is the best place for designers and developers to find each other.</p>
 
 		<button>CREATE A PROFILE</button>
 
-	<div class="Block Container"></div>
+	</div>
+
+	<div id="blockcontainer" class="inlineblock"></div>
 		<div class="createprofile"></div>
 			<h2>Create a Profile</h1>
 			<p>Are you a Designer? Developer? Put yourself out there so that others can find you!</p>
 			<div class="button 1"></div>
 				<button>SIGN UP NOW</button>
+
 		<div class="finddeveloper"></div>
 			<h2>Find a Developer</h1>
 			<p>Looking for a fantastic developer to work with on the next big thing? Look no further.</p>
 			<div class="button 2"></div>
 				<button>START YOUR SEARCH</button>
+
 		<div class="finddesigner"></div>
 			<h2>Find a Designer</h1>
 			<p>Need someone who can make a product intuitive and appealing? Get ready.</p>
