--- a/class15/startup-matchmaker-responsive/index.html
+++ b/class15/startup-matchmaker-responsive/index.html
@@ -6,13 +6,24 @@
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link href="script.js">
 </head>
 <body>
 	<div class="container">
 		<header id="page-header">
 			<div class="wrapper">
 				<h1><a href="index.html">Startup Matchmaker</a></h1>
-				<nav>
+				<nav class="desktopnav">
+					<ul>
+						<li><strong><a href="#">Developers</a></strong></li>
+						<li><strong><a href="#">Designers</a></strong></li>
+						<li><a href="#">How it Works</a></li>
+						<li><a href="#">Our Team</a></li>
+						<li><a href="#">Blog</a></li>
+					</ul>
+				</nav>
+				<img id="burger" src="images/threelines.png">
+				<nav class=mobilenav>
 					<ul>
 						<li><strong><a href="#">Developers</a></strong></li>
 						<li><strong><a href="#">Designers</a></strong></li>
@@ -65,4 +76,8 @@
 		</footer>
 	</div>
 </body>
+
+
+
+
 </html>
