--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -1,29 +1,26 @@
 <!doctype html>
 <html>
 	<head>
+
+		<img id="logo" src="img/BoardAssist Desktop.JPG">
+
+			<div class="container">
+				<h1>Some Startup</h1>
+				<nav id="large-nav">
+					<a href="#">Home</a>
+					<a href="#">About</a>
+					<a href="#">Contact</a>
+					<a href="#">Blog</a>
+				</nav>
+				
 	</head>
 	<body>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" href="styles.css">
 		<h1>Primary Heading</h1>
 		<h2>Secondary Heading</h2>
 		<p>first paragraph</p>
 		<p>this is another paragraph</p>
 		<a href="http://www.wikipedia.org">click me</a>
-		<ol>
-			<li>
-				apple
-				<ul>
-					<li>macintosh</li>
-					<li>granny smith</li>
-				</ul>
-			</li>
-			<li>orange</li>
-			<li>banana</li>
-		</ol>
-		<ul>
-			<li>gold</li>
-			<li>silver</li>
-			<li>bronze</li>
-		</ul>
+
 	</body>
 </html>
