--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -1,21 +1,32 @@
 <!doctype html>
 <html>
-	<head>
-
-		<img id="logo" src="img/BoardAssist Desktop.JPG">
-
-			<div class="container">
-				<h1>Some Startup</h1>
-				<nav id="large-nav">
-					<a href="#">Home</a>
-					<a href="#">About</a>
-					<a href="#">Contact</a>
-					<a href="#">Blog</a>
-				</nav>
-				
-	</head>
+<head> 
+	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/reset.css">
+</head>
 	<body>
-	<link rel="stylesheet" href="styles.css">
+
+		<header>
+
+			<div id="headercontainer">
+
+				<img id="desktoplogo" src="img/BoardAssist Desktop.JPG">
+
+				<img id="mobilelogo" src="img/BoardAssist Mobile.JPG">
+
+				<div class="container">
+					<nav id="large-nav">
+						<a href="#">Home</a>
+						<a href="#">About</a>
+						<a href="#">Contact</a>
+						<a href="#">Blog</a>
+					</nav>
+			</div>	
+		</header>
+
+		
+
+
 		<h1>Primary Heading</h1>
 		<h2>Secondary Heading</h2>
 		<p>first paragraph</p>
