--- a/Final Project/blog.html
+++ b/Final Project/blog.html
@@ -3,6 +3,7 @@
 <head> 
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/reset.css">
+	<link rel="structure" href="index.html">
 </head>
 	<body>
 
@@ -24,14 +25,7 @@
 			</div>	
 		</header>
 
-		
-
-
-		<h1>Primary Heading</h1>
-		<h2>Secondary Heading</h2>
-		<p>first paragraph</p>
-		<p>this is another paragraph</p>
-		<a href="http://www.wikipedia.org">click me</a>
+		<p> Yoooo this be the BLOG page </p>
 
 	</body>
 </html>
