--- a/Final Project/contact.html
+++ b/Final Project/contact.html
@@ -6,7 +6,7 @@
 </head>
 	<body>
 
-		<header>
+			<header>
 
 			<div id="headercontainer">
 
@@ -24,14 +24,8 @@
 			</div>	
 		</header>
 
-		
 
-
-		<h1>Primary Heading</h1>
-		<h2>Secondary Heading</h2>
-		<p>first paragraph</p>
-		<p>this is another paragraph</p>
-		<a href="http://www.wikipedia.org">click me</a>
+		<p> Yoooo this be the CONTACT page </p>
 
 	</body>
 </html>
