--- a/Final Project/blog.html
+++ b/Final Project/blog.html
@@ -3,10 +3,8 @@
 <head> 
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/reset.css">
-	<link rel="structure" href="index.html">
 </head>
 	<body>
-
 		<header>
 
 			<div id="headercontainer">
@@ -19,13 +17,25 @@
 					<nav id="large-nav">
 						<a href="home.html">Home</a>
 						<a href="about.html">About</a>
+						<a href="findaboard.html">Find a Board</a>
+						<a href="addtoboard.html">Add to Your Board</a>
 						<a href="contact.html">Contact</a>
 						<a href="blog.html">Blog</a>
 					</nav>
 			</div>	
 		</header>
 
-		<p> Yoooo this be the BLOG page </p>
-
+		<ul>
+			<li id="blog1" class="bloglist"> <h2>Adding to your Board? Top 10 Questions to Ask when Choosing a Board Recruiting Service</h2> </li>
+			<li id="blog2" class="bloglist"> <h2>Why Joining a Board is Great for Your Career</h2> </li>
+			<li id="blog3" class="bloglist"> <h2>Your Donor-Centered Appeal Letter Checklist</h2> </li>
+			<li id="blog4" class="bloglist"> <h2>Not Sure Why Your Nonprofit Needs a Junior Board?  Here's Some of Our Top Reasons Why You Do!</h2> </li>
+			<li id="blog5" class="bloglist"> <h2>Top Ten Tips for Finding a Perfect Nonprofit Board</h2> </li>
+			<li id="blog6" class="bloglist"> <h2>Four Great Reasons to Join a Nonprofit Board</h2> </li>
+			<li id="blog7" class="bloglist"> <h2>Volunteering vs. Donating vs. Board Service - What Role is Best for You?</h2> </li>
+			<li id="blog8" class="bloglist"> <h2>Top 10 Fundraising Trends and Predictions for 2016</h2> </li>
+			<li id="blog9" class="bloglist"> <h2>Finding a Nonprofit Partner - Who is the Right One?</h2> </li> 
+			<li id="blog10" class="bloglist"> <h2>How to Use Google AdWords to Get Free Money</h2> </li>
+		</ul>
 	</body>
 </html>
