--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -18,20 +18,15 @@
 					<nav id="large-nav">
 						<a href="home.html">Home</a>
 						<a href="about.html">About</a>
+						<a href="findaboard.html">Find a Board</a>
+						<a href="addtoboard.html">Add to Your Board</a>
 						<a href="contact.html">Contact</a>
 						<a href="blog.html">Blog</a>
 					</nav>
 			</div>	
 		</header>
 
-		
 
-
-		<h1>Primary Heading</h1>
-		<h2>Secondary Heading</h2>
-		<p>first paragraph</p>
-		<p>this is another paragraph</p>
-		<a href="http://www.wikipedia.org">click me</a>
 
 	</body>
 </html>
