--- a/Final Project/about.html
+++ b/Final Project/about.html
@@ -6,7 +6,7 @@
 </head>
 	<body>
 
-			<header>
+<header>
 
 			<div id="headercontainer">
 
@@ -18,6 +18,8 @@
 					<nav id="large-nav">
 						<a href="home.html">Home</a>
 						<a href="about.html">About</a>
+						<a href="findaboard.html">Find a Board</a>
+						<a href="addtoboard.html">Add to Your Board</a>
 						<a href="contact.html">Contact</a>
 						<a href="blog.html">Blog</a>
 					</nav>
