--- a/Final Project/blog.html
+++ b/Final Project/blog.html
@@ -346,10 +346,47 @@
 			Conducting collaborator research and assessments can no doubt be time consuming and disruptive for nonprofits.  However, with pressures CEOS face in demonstrating organizational and program sustainability and greater impact, conducting collaboration research is essential to facilitate these goals.<br><br>
 
 			</p>
-			
-			<li id="blog8" class="bloglist"> <h2>Top 10 Fundraising Trends and Predictions for 2016</h2> </li>
-			<li id="blog9" class="bloglist"> <h2>Finding a Nonprofit Partner - Who is the Right One?</h2> </li> 
-			<li id="blog10" class="bloglist"> <h2>How to Use Google AdWords to Get Free Money</h2> </li>
+
+			<li id="blog8" class="bloglist"> <h2>How to Use Google AdWords to Get Free Money</h2> </li>
+
+			<p id="blog8" class="blog"> We’ve updated one of our most popular blog posts because Google has updated their process. Thanks so much to Nonprofit Hub for writing this post and keeping us all current on the latest regarding this terrific free gift from Google! This post originally appeared on the Nonprofit Hub website. <br><br> 
+
+			How to Use Google AdWords to Get Free Money<br><br>
+
+			Free money doesn’t exist, but thanks to Google, free advertising can exist for your nonprofit.<br><br>
+
+			As a part of Google Grants, qualifying nonprofits can earn a free advertising budget of up to $10,000 each month to use on AdWords to help promote their website and cause.<br><br>
+
+			This is an easy program that your nonprofit can take part in to help raise its profile and reach a wider audience. You will have to jump through a few hoops, but nothing that should cause any stress or add much work to your daily life.<br><br>
+
+			Application<br><br>
+
+			The first step is to sign up for Google Grants at www.google.com/nonprofits. They have several requirements for a nonprofit to be eligible to be part of the program. First, your nonprofit must hold a current and valid charity status, which means you are a recognized by the IRS as a 501(c)3 organization. You need to agree to Google’s non-discrimination policies and its terms to how the grant will be received and used. Finally, you also need to have a website that is functioning and provides information about your nonprofit.<br><br>
+
+			Even if your organization is considered tax-exempt, like churches, it still must receive 501(c)3 status from the IRS to qualify for Google Grants. Certain organizations are not eligible including governmental entities, hospitals or health care organizations and schools, academic institutions or childcare centers (They may be eligible for Google’s education program.)<br><br>
+
+			If your organization meets those qualifications, submit your application to Google for review. You will receive quick acceptance/denied to the program. Once you are inside, you can enroll in a variety of programs such as Apps, Earth Pro, Maps API for Business, One Today and the YouTube Nonprofit Program. However, we are going to focus on Google AdWords for the remainder of the article.<br><br>
+
+			Using Google AdWords<br><br>
+
+			Congrats! If you’ve made it this far, you’re ready to start making a difference with AdWords. You can now start using your Google Grant for good. The first choice you will have to make is if you want to use the full version of AdWords or AdWords Express.<br><br>
+
+			The right choice depends on how much time you want to spend on the campaigns and how much customization you want from your ads. AdWords Express is the basic cookie cutter model. The management of the ads on AdWords Express is completely automated. It is the “set it and forget it” option. This works fine for people who don’t have a lot of extra time to get into the minutia of the campaigns (which we cover below), but the results won’t be as great because the campaign settings are more generic. The other major difference is what your ads look like. AdWords Express limits ads to text only while AdWords allows text, banners and video.<br><br>
+
+			Both programs only require you to pay for the clicks you receive and put their ads on Google Search and Google Maps, as well as mobile devices. In addition, you can target ads based on geography no matter which one you choose. Also, the ads you make must link to the website that you used in the application and the ads must also reflect the mission of your nonprofit, meaning you can sell products through the ads, but the proceeds must support your program. The ads are also limited to your website, so you can’t send people to link-heavy pages or display ads from Google AdSense.<br><br>
+
+			No matter which one you choose, you will set up an advertiser account similar to people who are paying to advertise. To stay in the AdWords program, you will need to log in frequently (at least once a month) to update your account and make sure that everything is working like you want.<br><br>
+
+			To start advertising, set a daily budget that will use up your budget in 31 days. You want to be sure to maximize your daily budget, because once the month is over, you don’t get to carry over any leftover amount to the next month. The first step is to select keywords that will trigger your ads when searched. (These words are selected for you if you choose AdWords Express) Words are valued at different rates for their cost-per-click, and you must choose words that do not exceed $2.00 per click. You’ll have to be creative because many words will be over your limit. A lot of the common phrases will cost more, but if you add a few more words onto the searches then the cost will drop significantly.<br><br>
+
+			You can also add negative words that will prevent your ads from popping up when certain terms are searched. While this can be tempting, don’t waste too much of your budget. For example, if your nonprofit is focused on planting trees, you can use the negative word of “family” to filter out people searching for genealogy information.<br><br>
+
+			You’ll need to find a balance between using all of your budget and using it in a way that yields productive results and is broad enough to capture an audience. Too broad and your searches won’t match your mission and desired audience, and too specific and you won’t get any hits and your budget is wasted. Monitor your account and see what searches are triggering your ads you’ll begin to figure out what words you need to include and also put on your negative list.<br><br>
+
+			We’ve just covered the top level of these programs here. You can get quite deeper in the details once you have the basics down. Keep looking for new ways to get out there and promoting your nonprofit. It might take some time to figure out what will work for your nonprofit, but over time, you’ll start gaining traction with a whole new audience. And that’s OK. If you struggle to start, keep trying new words and what will be the most beneficial practices. You can’t truly fail because, after all, you are playing with house money.<br><br>
+
+
+		
 		</ul>
 	</body>
 </html>
