--- a/Final Project/blog.html
+++ b/Final Project/blog.html
@@ -3,6 +3,7 @@
 <head> 
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/reset.css">
+
 </head>
 	<body>
 		<header>
@@ -26,7 +27,7 @@
 		</header>
 
 		<ul>
-			<li id="blog1" class="bloglist"> <h2>Adding to your Board? Top 10 Questions to Ask when Choosing a Board Recruiting Service</h2> </li>
+			<li id="blog1li" class="bloglist"> <h2>Adding to your Board? Top 10 Questions to Ask when Choosing a Board Recruiting Service</h2> </li>
 
 			<p id="blog1" class="blog"> Identifying new trustees for your board of directors is one of the most important functions any nonprofit board performs. And with nearly 2 million board seats opening up in this country every year, board recruiting can be challenging. For that reason, many nonprofits opt to turn to board recruiting services like BoardAssist for help. Choosing the best board recruiting service for your nonprofit is critical. What questions should you be asking as you think through who will perform the very important function of board recruiting for you?  <br> <br>
 
@@ -76,7 +77,7 @@
 			</p>
 
 
-			<li id="blog2" class="bloglist"> <h2>Why Joining a Board is Great for Your Career</h2> </li>
+			<li id="blog2li" class="bloglist"> <h2>Why Joining a Board is Great for Your Career</h2> </li>
 
 			<p id="blog2" class="blog"> We know our blog readers are interested in “being the change” they want to see in the world and giving back, but sometimes its hard to find time to do just that with all the demands from work. Our argument for making time: joining a board is great for your career.  You’ll have a chance to be an agent of change and give back, but also do yourself a great service. For more on why, see what this week’s guest blogger Alyssa Gelbard had to say. <br><br>
 
@@ -141,7 +142,7 @@
 			</p>
 
 
-			<li id="blog3" class="bloglist"> <h2>Not Sure Why Your Nonprofit Needs a Junior Board?  Here's Some of Our Top Reasons Why You Do!</h2> </li>
+			<li id="blog3li" class="bloglist"> <h2>Not Sure Why Your Nonprofit Needs a Junior Board?  Here's Some of Our Top Reasons Why You Do!</h2> </li>
 
 			<p id="blog3" class="blog">  Last fall BoardAssist launched a junior board matching pilot program to find junior boards for all the terrific millennials who approach us for board service. The pilot was an immediate success with loads of amazing young professionals approaching us for junior board seats. From the nonprofits we helped, the feedback has been extremely positive.  While many were concerned that having a junior board would take a lot of staff time away from other critical functions, what we’ve heard has been wholly to the contrary. Millennials are terrific self-starters that don’t need or want a lot of hand-holding.  Give them a task to do, and they will get it done! <br><br>
 
@@ -185,7 +186,7 @@
 
 			</p>
 
-			<li id="blog4" class="bloglist"> <h2>Top Ten Tips for Finding a Perfect Nonprofit Board</h2> </li>
+			<li id="blog4li" class="bloglist"> <h2>Top Ten Tips for Finding a Perfect Nonprofit Board</h2> </li>
 
 			<p id="blog4" class="blog"> You asked.  We listened.  We hope you find our Top Ten Tips for Finding a Perfect Nonprofit Board useful.  For more on finding that perfect fit, download our free book, Giving Back, complete with case studies and answers to the FAQs we are asked most about board service.  Ready to join a board?  Tell us more so we can find you your dream board! <br><br>
 
@@ -238,7 +239,7 @@
 
 			</p>
 
-			<li id="blog5" class="bloglist"> <h2>Four Great Reasons to Join a Nonprofit Board</h2> </li>
+			<li id="blog5li" class="bloglist"> <h2>Four Great Reasons to Join a Nonprofit Board</h2> </li>
 
 			<p id="blog5" class="blog">Why should you consider filling one of the 1.8 million nonprofit board seats that open up in the US every year? Most candidates come to us with an answer to this question before we even ask. We hear, “My wife is pregnant and I want to model ‘giving back’ for our children,” “I was always a leader in college and grad school but until now I’ve been too busy to give back,” and “I feel an obligation to share because I’ve been so fortunate” among many other great reasons.<br><br>
 
@@ -272,7 +273,7 @@
 
 			</p>
 
-			<li id="blog6" class="bloglist"> <h2>Volunteering vs. Serving on a Board vs. Donating – What Nonprofit Role is Best for You?</h2> </li>
+			<li id="blog6li" class="bloglist"> <h2>Volunteering vs. Serving on a Board vs. Donating – What Nonprofit Role is Best for You?</h2> </li>
 
 			<p id="blog6" class="blog">As New York’s leading personalized nonprofit board matching service, BoardAssist is approached daily by New Yorkers who want to make a difference in the nonprofit world but don’t know how to get started. For many, the decision has been made to give back, but they aren’t sure if they want to do so by joining a board, or just volunteering, or simply being a generous donor. For others, they want to join a board but are unclear on what the difference is between a full governing board seat, an advisory board role or a junior board position.<br><br>
 
@@ -307,7 +308,7 @@
 			Thank you! <br><br>                                                                                                                     Whatever role you choose on your nonprofit service path, we thank you for the time and energy you bring to the nonprofit you choose to support!<br><br>
 
 
-			<li id="blog7" class="bloglist"> <h2>Finding a Nonprofit Partner: Who is the Right One?</h2> </li>
+			<li id="blog7li" class="bloglist"> <h2>Finding a Nonprofit Partner: Who is the Right One?</h2> </li>
 
 			<p id="blog7" class="blog">There comes a moment in most nonprofits’ lives where they realize it might be helpful to collaborate with a partner on anything from programming to sharing back-office expenses to a full out merger. But once this determination has been made, many nonprofits are stumped as to how to find that critical partner.  This week’s guest blogger Stephanie Spindell has the answers for us. Thanks Stephanie! <br><br>
 
@@ -347,7 +348,7 @@
 
 			</p>
 
-			<li id="blog8" class="bloglist"> <h2>How to Use Google AdWords to Get Free Money</h2> </li>
+			<li id="blog8li" class="bloglist"> <h2>How to Use Google AdWords to Get Free Money</h2> </li>
 
 			<p id="blog8" class="blog"> We’ve updated one of our most popular blog posts because Google has updated their process. Thanks so much to Nonprofit Hub for writing this post and keeping us all current on the latest regarding this terrific free gift from Google! This post originally appeared on the Nonprofit Hub website. <br><br> 
 
@@ -388,5 +389,10 @@
 
 		
 		</ul>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+		<script src="js/script.js"></script>
+
+
 	</body>
 </html>
