--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -2,7 +2,8 @@
 <html>
 <head> 
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="css/reset.css">
+	<link rel="reset" href="css/reset.css">
+	<link rel="interact" href="js/script.js">
 </head>
 	<body>
 
@@ -27,6 +28,10 @@
 		</header>
 
 
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
+	The line above invoked Jquery, Add other Scripts below
 
 	</body>
 </html>
