--- a/Final Project/findaboard.html
+++ b/Final Project/findaboard.html
@@ -26,7 +26,61 @@
 			</div>	
 		</header>
 
-		
+		<div id="surveycontainer">
+
+		<input type="text" placeholder="Name">
+
+		<input type="text" placeholder="Link to LinkedIn Profile">
+
+		<input type="text" placeholder="Employer">
+
+		<input type="text" placeholder="Job Description">
+
+		<input type="text" placeholder="Email Address">
+
+		<select id="Where do you live?">
+			<option value='Midtown'>Midtown</option>
+			<option value='Uptown'>Uptown</option>
+			<option value='Downtown'>Downtown</option>
+			<option value='Brooklyn'>Brooklyn</option>
+			<option value='Long Island'>Long Island</option>
+			<option value='Westchester/Connecticut'>Westchester/Connecticut</option>
+			<option value='New Jersey'>New Jersey</option>
+			<option value='Other'>Other</option>
+		</select>
+
+		<select id="Where do you work?">
+			<option value='Midtown'>Midtown</option>
+			<option value='Uptown'>Uptown</option>
+			<option value='Downtown'>Downtown</option>
+			<option value='Brooklyn'>Brooklyn</option>
+			<option value='Long Island'>Long Island</option>
+			<option value='Westchester/Connecticut'>Westchester/Connecticut</option>
+			<option value='New Jersey'>New Jersey</option>
+			<option value='Other'>Other</option>
+		</select>			
+
+		<select id="What size organization would you prefer to support?">
+			<option value='large'>Large, established organization recognized in it's field</option>
+			<option value='medium'>Mid-sized organization</option>
+			<option value='small'>Small start-up with lots of room for growth</option>
+			<option value='na'>Size doesn't matter</option>
+		</select>
+			
+
+		<input type="text" placeholder="What cause or areas would you like to support?">
+
+		<select id="How much financial support do you feel comfortable committing annually?">
+			<option value='1000'>$1000 per year</option>
+			<option value='5000'>$1000 - $5000</option>
+			<option value='10000'>$5000 - $10,000</option>
+			<option value='10000+'>$10,000+</option>
+		</select>
+
+		<input type="text" placeholder="How did you learn about BoardAssist?  Please be as specific as possible.">
+
+		</div>
+
 
 
 		<h1>Primary Heading</h1>
