--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -27,7 +27,21 @@
 			</div>	
 		</header>
 
+	<div id="homepagecontainer">
 
+		<h1>Connecting fantastic people with amazing nonprofits</h1>
+
+		<p class="homepage"> 
+
+			At BoardAssist we believe: find great people for amazing nonprofit boards and fantastic things happen! We identify and personally match high impact New Yorkers with incredible boards every day. <br> <br>
+		
+			Our placements have generated over 65 million dollars for the wonderful boards we serve, over the last 15 years, with over 90% of our placements serving as leaders on their boards within 12 months of being placed.
+
+		</p>
+
+		<iframe width="840px" height="472px" src="https://www.youtube.com/embed/aFXzYdUN4ts" frameborder="0" allowfullscreen></iframe>
+
+	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<link rel="interact" href="js/script.js">
