--- a/Final Project/findaboard.html
+++ b/Final Project/findaboard.html
@@ -81,13 +81,7 @@
 
 		</div>
 
-		<button type="button">Submit</button>
-
-		<h1>Primary Heading</h1>
-		<h2>Secondary Heading</h2>
-		<p>first paragraph</p>
-		<p>this is another paragraph</p>
-		<a href="http://www.wikipedia.org">click me</a>
+		<button id="findaboardbutton" type="button">Submit</button>
 
 	</body>
 </html>
