--- a/Final Project/findaboard.html
+++ b/Final Project/findaboard.html
@@ -26,6 +26,26 @@
 			</div>	
 		</header>
 
+		<p>
+
+		BoardAssist makes it easy for people to give back. <br><br>
+
+		Many New Yorkers want to serve the nonprofit community in a board capacity but need advice on how to access what they perceive to be a clubby, closed world.  For others the challenge is researching and evaluating potential board opportunities generally, and specifically screening out boards that just want their financial, as opposed to intellectual capital.  BoardAssist does all of this for our candidates and more, all at no cost to our board candidates as we are a nonprofit ourselves.<br><br>
+
+		Our goal is to find you a board where you can truly engage your mind, and not just your wallet.<br><br>
+
+		Fundraising is an important part of board service, but we believe that should never be the primary role of any board member.  We are very proud of the fact that over 90% of our board placements typically serve as leaders on the boards where we place them within twelve months of being placed.  They are not just being valued as ATM machines.  That is important to our candidates and to us.<br><br>
+
+		We pull out the board details that you have told us matter most to you.<br><br>
+
+		In addition to board finance, we talk extensively with our nonprofit clients about their mission, budget, staff, and board composition, as well as mundane but important details such as when their board meets, how often, at what time of day and where.  At BoardAssist, there are no surprises once on a board. <br><br>
+
+		We work closely with you every step of the way, making it easy to pick the perfect board for you.<br><br>
+
+		With so many nonprofits competing for our candidates, it is hard for potential trustees to make an intelligent choice as to which board is the strongest fit for them.  Once we help you select a few boards to explore, we then introduce you to these nonprofits, and stay in constant touch as you meet the nonprofits on your short list.  At the end, the best part for us is helping you decide which of the nonprofit board offers you have received to accept.<br><br>
+
+		</p>
+
 		<div id="surveycontainer">
 
 		<input type="text" placeholder="Name">
@@ -37,6 +57,11 @@
 		<input type="text" placeholder="Job Description">
 
 		<input type="text" placeholder="Email Address">
+
+		<input type="text" placeholder="What cause or areas would you like to support?">
+
+		<input type="text" placeholder="How did you learn about BoardAssist?  Please be as specific as possible.">
+
 
 		<select id="Where do you live?">
 			<option value='Midtown'>Midtown</option>
@@ -67,9 +92,6 @@
 			<option value='na'>Size doesn't matter</option>
 		</select>
 			
-
-		<input type="text" placeholder="What cause or areas would you like to support?">
-
 		<select id="How much financial support do you feel comfortable committing annually?">
 			<option value='1000'>$1000 per year</option>
 			<option value='5000'>$1000 - $5000</option>
@@ -77,7 +99,6 @@
 			<option value='10000+'>$10,000+</option>
 		</select>
 
-		<input type="text" placeholder="How did you learn about BoardAssist?  Please be as specific as possible.">
 
 		</div>
 
