--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -33,20 +33,27 @@
 
 		<p class="homepage"> 
 
-			At BoardAssist we believe: find great people for amazing nonprofit boards and fantastic things happen! We identify and personally match high impact New Yorkers with incredible boards every day. <br> <br>
+			At BoardAssist we believe: find great people for amazing nonprofit boards and fantastic things will happen! We identify and personally match high impact New Yorkers with incredible boards every day. <br> <br>
 		
 			Our placements have generated over 65 million dollars for the wonderful boards we serve, over the last 15 years, with over 90% of our placements serving as leaders on their boards within 12 months of being placed.
 
 		</p>
 
-		<iframe width="840px" height="472px" src="https://www.youtube.com/embed/aFXzYdUN4ts" frameborder="0" allowfullscreen></iframe>
+		<iframe id="mobilevideo" width="560px" height="315px" src="https://www.youtube.com/embed/aFXzYdUN4ts" frameborder="0" allowfullscreen></iframe>
+
+		<iframe id="desktopvideo" width="840px" height="472px" src="https://www.youtube.com/embed/aFXzYdUN4ts" frameborder="0" allowfullscreen></iframe>
 
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
 	<link rel="interact" href="js/script.js">
 
-	The line above invoked Jquery, Add other Scripts below
-
+	<script src="jquery.smooth-scroll.min.js"></script>
+	<script>
+		$('a').smoothScroll({
+			speed: 1200
+		});
+	</script>
 	</body>
 </html>
