--- a/Final Project/findaboard.html
+++ b/Final Project/findaboard.html
@@ -24,11 +24,15 @@
 						<a href="blog.html">Blog</a>
 					</nav>
 			</div>	
+
+			
 		</header>
 
-		<p>
+		<div class="quotebox">
 
-		BoardAssist makes it easy for people to give back. <br><br>
+			<p class="intro"> BoardAssist makes it easy for people to give back. <br><br></p>
+
+		</div>
 
 		Many New Yorkers want to serve the nonprofit community in a board capacity but need advice on how to access what they perceive to be a clubby, closed world.  For others the challenge is researching and evaluating potential board opportunities generally, and specifically screening out boards that just want their financial, as opposed to intellectual capital.  BoardAssist does all of this for our candidates and more, all at no cost to our board candidates as we are a nonprofit ourselves.<br><br>
 
