--- a/Final Project/addtoboard.html
+++ b/Final Project/addtoboard.html
@@ -26,7 +26,11 @@
 			</div>	
 		</header>
 
-		
+		<div class="mantra"> 
+			<h3> "We are extremely grateful to you. You are providing a unique, valuable service to NYC." </h3> <br>
+			<h4> -Board Chair, Wildcat Services</h4>
+		</div>	
+
 
 
 		<h1>Primary Heading</h1>
@@ -37,3 +41,5 @@
 
 	</body>
 </html>
+
+
