--- a/Final Project/blog.html
+++ b/Final Project/blog.html
@@ -25,6 +25,10 @@
 			</div>	
 		</header>
 
+			<div class="mantra"> 
+				<h3> Connecting Fantastic People with Amazing Nonprofit Boards </h3>
+			</div>	
+
 		<ul>
 			<li id="blog1li" class="bloglist"> <h2>Adding to your Board? Top 10 Questions to Ask when Choosing a Board Recruiting Service</h2> </li>
 
