--- a/Final Project/findaboard.html
+++ b/Final Project/findaboard.html
@@ -27,6 +27,11 @@
 
 		</header>
 
+		<div class="mantra"> 
+			<h3> "The number and breadth of board choices available to me was enormous." </h3> <br>
+			<h4> -BoardAssist Candidate </h4>
+		</div>	
+
 		<p class="intro">
 		
 		<span> BoardAssist makes it easy to give back. </span> <br><br>
@@ -47,62 +52,71 @@
 
 		</p>
 
+		<div class="mantra"> 
+			<h3> Fill out the application below, and we will put you in touch with nonprofits that match your interests. </h3> <br>
+		</div>			
+
 		<div id="surveycontainer">
 
-		<input type="text" placeholder="Name">
+			<input type="text" placeholder="Name">
 
-		<input type="text" placeholder="Link to LinkedIn Profile">
+			<input type="text" placeholder="Link to LinkedIn Profile">
 
-		<input type="text" placeholder="Employer">
+			<input type="text" placeholder="Employer">
 
-		<input type="text" placeholder="Job Description">
+			<input type="text" placeholder="Job Description">
 
-		<input type="text" placeholder="Email Address">
+			<input type="text" placeholder="Email Address">
 
-		<input type="text" placeholder="What cause or areas would you like to support?">
+			<input type="text" placeholder="What cause or areas would you like to support?">
 
-		<input type="text" placeholder="How did you learn about BoardAssist?  Please be as specific as possible.">
+			<input type="text" placeholder="How did you learn about BoardAssist?  Please be as specific as possible.">
 
 
-		<select id="Where do you live?">
-			<option value='Midtown'>Midtown</option>
-			<option value='Uptown'>Uptown</option>
-			<option value='Downtown'>Downtown</option>
-			<option value='Brooklyn'>Brooklyn</option>
-			<option value='Long Island'>Long Island</option>
-			<option value='Westchester/Connecticut'>Westchester/Connecticut</option>
-			<option value='New Jersey'>New Jersey</option>
-			<option value='Other'>Other</option>
-		</select>
+			<select id="Where do you live?">
+				<option value='question1'>Where do you live?</option>
+				<option value='Midtown'>Midtown</option>
+				<option value='Uptown'>Uptown</option>
+				<option value='Downtown'>Downtown</option>
+				<option value='Brooklyn'>Brooklyn</option>
+				<option value='Long Island'>Long Island</option>
+				<option value='Westchester/Connecticut'>Westchester/Connecticut</option>
+				<option value='New Jersey'>New Jersey</option>
+				<option value='Other'>Other</option>
+			</select>
 
-		<select id="Where do you work?">
-			<option value='Midtown'>Midtown</option>
-			<option value='Uptown'>Uptown</option>
-			<option value='Downtown'>Downtown</option>
-			<option value='Brooklyn'>Brooklyn</option>
-			<option value='Long Island'>Long Island</option>
-			<option value='Westchester/Connecticut'>Westchester/Connecticut</option>
-			<option value='New Jersey'>New Jersey</option>
-			<option value='Other'>Other</option>
-		</select>			
+			<select id="Where do you work?">
+				<option value='question2'>Where do you work?</option>
+				<option value='Midtown'>Midtown</option>
+				<option value='Uptown'>Uptown</option>
+				<option value='Downtown'>Downtown</option>
+				<option value='Brooklyn'>Brooklyn</option>
+				<option value='Long Island'>Long Island</option>
+				<option value='Westchester/Connecticut'>Westchester/Connecticut</option>
+				<option value='New Jersey'>New Jersey</option>
+				<option value='Other'>Other</option>
+			</select>			
 
-		<select id="What size organization would you prefer to support?">
-			<option value='large'>Large, established organization recognized in it's field</option>
-			<option value='medium'>Mid-sized organization</option>
-			<option value='small'>Small start-up with lots of room for growth</option>
-			<option value='na'>Size doesn't matter</option>
-		</select>
-			
-		<select id="How much financial support do you feel comfortable committing annually?">
-			<option value='1000'>$1000 per year</option>
-			<option value='5000'>$1000 - $5000</option>
-			<option value='10000'>$5000 - $10,000</option>
-			<option value='10000+'>$10,000+</option>
-		</select>
+			<select id="What size organization would you prefer to support?">
+				<option value='question3'>What size organization would you prefer to support?</option>
+				<option value='large'>Large, established organization recognized in it's field</option>
+				<option value='medium'>Mid-sized organization</option>
+				<option value='small'>Small start-up with lots of room for growth</option>
+				<option value='na'>Size doesn't matter</option>
+			</select>
+				
+			<select id="How much financial support do you feel comfortable committing annually?">
+				<option value='question4'>$How much are you able to donate annually?</option>
+				<option value='1000'>$1000 per year</option>
+				<option value='5000'>$1000 - $5000</option>
+				<option value='10000'>$5000 - $10,000</option>
+				<option value='10000+'>$10,000+</option>
+			</select>
+
+		<button id="findaboardbutton" type="button">Submit</button>
 
 		</div>
 
-		<button id="findaboardbutton" type="button">Submit</button>
 
 	</body>
 </html>
